# hs-starter

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  PLAN.md  README.md  app.json  cabal.project  cabal.project.freeze  codecov.yml  hs-starter.cabal  nginx.conf.sigil  package.yaml
.github/workflows/: ci.yml  integration.yml
app/: Main.hs  Migrate.hs  OpenApi.hs
db/pgroll/: .ledger  0001_bootstrap.yaml  0002_add_users_and_logins.yaml  0003_oauth_sessions.yaml  0004_firebase_users.yaml
fixtures/sample/: package.yaml
fixtures/sample/.github/workflows/: ci.yml
fixtures/sample/app/: Main.hs
fixtures/sample/scripts/: hpack
fixtures/sample/src/: Sample.hs
fixtures/sample/test/: Main.hs
frontend/: openapi.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/: apiClient.ts  session.ts  types.ts
frontend/src/lib/api/: index.ts
frontend/src/lib/api/core/: OpenAPI.ts
frontend/src/lib/api/models/: FirebaseClientConfig.ts  FirebaseUser.ts  HealthCheckReport.ts  HealthStatus.ts  JsonValue.ts  SessionExchangeRequest.ts  SessionExchangeResponse.ts  SessionLogoutResponse.ts  UTCTime.ts  UserProfileResponse.ts
frontend/src/lib/api/services/: DefaultService.ts
frontend/src/lib/components/: Topbar.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/profile/: +page.svelte
integration-test/: package-lock.json  playwright.config.js
scripts/: add_as_http_layer.sh  blindbench.sh  check-coverage.sh  check-firebase-config.sh  dokku-predeploy.sh  playwright.sh  squealgen.sh  test_add_http_layer.sh  update_agents_md.sh
scripts/dokku-cancel-build/: README.md  cancel-builds
scripts/dokku-cancel-build/remote/: cancel-builds-core.sh
scripts/templates/: cabal.project.local
src/Starter/: Application.hs  Env.hs  Prelude.hs  Server.hs
src/Starter/Auth/: Firebase.hs  Session.hs
src/Starter/Database/: Connection.hs  Generated.hs  OAuth.hs  Schema.hs  Users.hs
src/Starter/Database/PostgreSQL/: URL.hs
src/Starter/OAuth/: Types.hs
test/: Spec.hs
test/Starter/Tests/: Db.hs  Health.hs  HealthSpec.hs  Property.hs  PropertySpec.hs  Roboservant.hs  RoboservantSpec.hs
test/playwright/: package.json
test/playwright/tests/: me.spec.js
