cabal-version:      3.8
name:               hs-starter
version:            0.1.0.0
synopsis:           Servant starter application with Squeal and testing scaffolding
description:        Starter kit for LambdaLabs Haskell services built on Servant, Squeal, and modern tooling.
license:            NONE
author:             Mark Wotton
maintainer:         mwotton@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md AGENTS.md

common common-settings
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude,
        OverloadedStrings,
        DerivingStrategies,
        DeriveAnyClass,
        DataKinds,
        TypeOperators
    ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
    build-depends: base ^>=4.19.2.0

library
    import: common-settings
    hs-source-dirs: src
    exposed-modules:
        Starter.Application
        Starter.Database.OAuth
        Starter.Database.Connection
        Starter.Database.Schema
        Starter.Env
        Starter.OAuth.Types
        Starter.Prelude
        Starter.Server
    other-modules:
        Starter.Database.Generated
  build-depends:
        aeson >=2.2 && <2.3,
        bytestring >=0.11 && <0.13,
        postgresql-simple-url >=0.2 && <0.3,
        postgresql-simple >=0.6 && <0.7,
        hashable >=1.4 && <1.5,
        generics-sop >=0.5 && <0.6,
        hs-opentelemetry-instrumentation-servant >=0.2 && <0.3,
        hs-opentelemetry-instrumentation-wai >=0.1 && <0.2,
        hs-opentelemetry-sdk >=0.1 && <0.2,
        time >=1.12 && <1.15,
        servant-server >=0.20 && <0.21,
        squeal-postgresql >=0.9.2 && <0.10,
        text >=2.0 && <2.2,
        unliftio >=0.2 && <0.3,
        uuid >=1.3 && <1.4,
        wai >=3.2 && <3.3,
        warp >=3.4 && <3.5

executable hs-starter
    import: common-settings
    hs-source-dirs: app
    main-is:          Main.hs
    build-depends:
        hs-starter

executable migrate
    import: common-settings
    hs-source-dirs: app
    main-is:          Migrate.hs
    build-depends:
        hs-starter
    buildable: False

test-suite hs-starter-tests
    import: common-settings
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Spec.hs
    other-modules:
        Starter.Tests.Db
        Starter.Tests.Property
        Starter.Tests.Roboservant
    build-depends:
        hs-starter,
        falsify >=0.2 && <0.3,
        roboservant >=0.1.0.4,
        squeal-postgresql >=0.9.2 && <0.10,
        tasty ^>=1.5,
        tasty-hunit ^>=0.10,
        tmp-postgres
